--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,12 +7,12 @@
   --button-secondary-hover: #f2f2f2;
 
   display: grid;
-  grid-template-rows: 20px 1fr 20px;
+  grid-template-rows: 12px 1fr 20px;
   align-items: center;
   justify-items: center;
   min-height: 100vh;
   padding: 80px;
-  gap: 64px;
+  gap: 0px;
   font-family: var(--font-geist-sans);
   background-color: #fff;
 }
@@ -50,13 +50,12 @@
 
 .main {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   gap: 32px;
   grid-row-start: 2;
-  max-width: 1400px;
-  margin: 64px auto 0;
-  padding: 2rem 1.5rem;
-  gap: 2rem;
+  /* max-width: 1600px; */
+  margin: 1rem auto 0;
+  padding: 0rem 1.5rem;
 }
 
 .main ol {
@@ -124,7 +123,6 @@
 
 .content {
   flex: 1;
-  max-width: 900px;
 }
 
 .content h1 {
